Adjust contrast for sign in link to resolve Wave contrast error

--- a/src/styles/AddCompany.module.css
+++ b/src/styles/AddCompany.module.css
@@ -30,11 +30,11 @@ a:hover i {
 
 .Bold {
     font-weight: bold;
-    color:#d69303;
+    color:#fdc54c;
 }
 
 .Bold:hover {
-    color:#679cb1;
+    color:#5ed0fd;
 }
 
 .Link {
